--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
 <hi>This is the home page.</hi>
