--- a/templates/contact (copy).html
+++ b/templates/contact (copy).html
@@ -13,22 +13,23 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+       {% load static%}
+      <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{% static "css/style (copy).css" %}">
       <!-- responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="{% static "css/responsive.css" %}">
       <!-- awesome fontfamily -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+      <script src="{% static "https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js" %}"></script>
+      <script src="{% static "https://oss.maxcdn.com/respond/1.4.2/respond.min.js" %}"></script><![endif]-->
    </head>
    <!-- body -->
    <body class="main-layout inner_page">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="" /></div>
+         <div class="loader"></div>
       </div>
       <!-- end loader -->
       <div id="mySidepanel" class="sidepanel">
@@ -46,7 +47,7 @@
                <div class="row">
                   <div class="col-sm-3">
                      <div class="logo">
-                        <a href="index.html"><img src="images/logo_footer.png" /></a>
+                        <a href="index.html"><img src="{% static "images/logo_footer.png" %}" /></a>
                      </div>
                   </div>
                   <div class="col-sm-9">
@@ -56,7 +57,7 @@
                         <li class="d_none"> <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>demo@gmail.com</a></li>
                         <li class="d_none"> <a href="#">Login <i class="fa fa-user" aria-hidden="true"></i></a> </li>
                         <li class="d_none"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></li>
-                        <li> <button class="openbtn" onclick="openNav()"><img src="images/menu_btn.png"></button></li>
+                        <li> <button class="openbtn" onclick="openNav()"><img src="{% static "images/menu_btn.png" %}"></button></li>
                      </ul>
                   </div>
                </div>
@@ -124,7 +125,7 @@
                   </div>
                   <div class="col-md-4 col-sm-6">
                      <div class="reader">
-                        <a href="index.html"><img src="images/logo_footer.png" alt="#"/></a>
+                        <a href="index.html"><img src="{% static "images/logo_footer.png" %}" alt="#"/></a>
                         <p class="padd_flet40">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
                      </div>
                   </div>
@@ -143,10 +144,10 @@
                      <div class="reader">
                         <h3>Recent Posts</h3>
                         <ul class="re_post">
-                           <li><img src="images/re_img1.jpg" alt="#"/></li>
-                           <li><img src="images/re_img2.jpg" alt="#"/></li>
-                           <li><img src="images/re_img3.jpg" alt="#"/></li>
-                           <li><img src="images/re_img4.jpg" alt="#"/></li>
+                           <li><img src="{% static "images/re_img1.jpg" %}" alt="#"/></li>
+                           <li><img src="{% static "images/re_img2.jpg" %}" alt="#"/></li>
+                           <li><img src="{% static "images/re_img3.jpg" %}" alt="#"/></li>
+                           <li><img src="{% static "images/re_img4.jpg" %}" alt="#"/></li>
                         </ul>
                      </div>
                   </div>
@@ -171,10 +172,10 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/custom.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="{% static "js/jquery.min.js"%}"></script>
+      <script src="{% static "js/bootstrap.bundle.min.js"%}"></script>
+      <script src="{% static "js/custom.js"%}"></script>
+      <script src="{% static "js/jquery-3.0.0.min.js"%}"></script>
       <script>
          // This example adds a marker to indicate the position of Bondi Beach in Sydney,
          // Australia.
@@ -199,7 +200,7 @@
          }
       </script>
       <!-- google map js -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
+      <script src=" {% static "https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"%}"></script>
       <!-- end google map js -->
    </body>
 </html>
