--- a/templates/rhino_contact.html
+++ b/templates/rhino_contact.html
@@ -13,15 +13,15 @@
       <meta name="author" content="">
       <!-- bootstrap css -->
        {% load static %}
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{% static "css/style.css" %}">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="{% static "css/responsive.css" %}">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="{% static "images/fevicon.png" %}" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="{% static "css/jquery.mCustomScrollbar.min.css" %}">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -33,7 +33,7 @@
    <body class="main-layout inner_page">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#"/></div>
+         <div class="loader"><img src="{% static "images/loading.gif" %}" alt="#"/></div>
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -170,7 +170,7 @@
             <div class="container">
                <div class="row">
                   <div class=" col-lg-3 col-md-6">
-                     <a class="logo_bottom"><img src="images/logo_bottom.png" alt="#"/></a>
+                     <a class="logo_bottom"><img src="{% static "images/logo_bottom.png" %}" alt="#"/></a>
                      <p class="many">
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou
                      </p>
@@ -188,10 +188,10 @@
                   <div class=" col-lg-3 col-md-6">
                      <h3>INSTAGRAM FEEDS</h3>
                      <ul class="insta text_align_left">
-                        <li><img src="images/inst1.png" alt="#"/></li>
-                        <li><img src="images/inst2.png" alt="#"/></li>
-                        <li><img src="images/inst3.png" alt="#"/></li>
-                        <li><img src="images/inst4.png" alt="#"/></li>
+                        <li><img src="{% static "images/inst1.png" %}" alt="#"/></li>
+                        <li><img src="{% static "images/inst2.png" %}" alt="#"/></li>
+                        <li><img src="{% static "images/inst3.png" %}" alt="#"/></li>
+                        <li><img src="{% static "images/inst4.png" %}" alt="#"/></li>
                      </ul>
                   </div>
                   <div class=" col-lg-3 col-md-6 ">
@@ -216,11 +216,11 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="{% static "js/jquery.min.js" %}"></script>
+      <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+      <script src="{% static "js/jquery-3.0.0.min.js" %}"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="{% static "js/jquery.mCustomScrollbar.concat.min.js" %}"></script>
+      <script src="{% static "js/custom.js" %}"></script>
    </body>
 </html>
